tests/machine/x/c/python_auto.error
line: 0
error: output mismatch
-- got --
4
3.1415926535897931
-- want --
4
3.141592653589793
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:53Z
