tests/machine/x/c/python_auto.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:53Z
#include <stdio.h>
#include <stdlib.h>

int main() {
  printf("%d\n", 4);
  printf("%.17g\n", 3.141592653589793);
  return 0;
}
